--- a/readme
+++ b/readme
@@ -1,9 +1,14 @@
 Game of life Made in pygame.
+Cellular automaton.
+Plane filled with grid where a few simple rule exists.
+The rules are:
+1.Any live cell with fewer than two live neighbours dies, as if by underpopulation.
+2.Any live cell with two or three live neighbours lives on to the next generation.
+3.Any live cell with more than three live neighbours dies, as if by overpopulation.
+4.Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.
 
-
-
-Emergence 
-
+Complexity can arise quickly with some patterns, while other result to nothing.
+Shows how complexity can arise from simple laws.
 
 
 Some resources to learn more About John Conway's Game of life:
